three.js関連ファイルを共通で扱うように変更

--- a/theta_photo/index.html
+++ b/theta_photo/index.html
@@ -10,9 +10,9 @@
 	</style>
 </head>
 <body>
-<script src="js/vendor/three.min.js"></script>
-<script src="js/vendor/controls/OrbitCtrols.js"></script>
-<script src="js/vendor/controls/DeviceOrientationControls.js"></script>
+<script src="../js/vendor/three.min.js"></script>
+<script src="../js/vendor/controls/OrbitCtrols.js"></script>
+<script src="../js/vendor/controls/DeviceOrientationControls.js"></script>
 <script src="js/main.js"></script>
 <script>
 main();
