--- a/collada_loader/index.html
+++ b/collada_loader/index.html
@@ -10,10 +10,10 @@
 	</style>
 </head>
 <body>
-<script src="js/vendor/three.min.js"></script>
-<script src="js/vendor/libs/stats.js"></script>
-<script src="js/vendor/controls/OrbitCtrols.js"></script>
-<script src="js/vendor/loaders/ColladaLoader.js"></script>
+<script src="../js/vendor/three.min.js"></script>
+<script src="../js/vendor/libs/stats.js"></script>
+<script src="../js/vendor/controls/OrbitCtrols.js"></script>
+<script src="../js/vendor/loaders/ColladaLoader.js"></script>
 <script src="js/main.js"></script>
 <script>window.addEventListener( 'DOMContentLoaded', main, false );</script>
 </body>
