--- a/theta_video/index.html
+++ b/theta_video/index.html
@@ -17,8 +17,8 @@
 
 	<div id="container"></div>
 
-	<script src="./js/three.min.js"></script>
-	<script src="./js/main.js"></script>
+	<script src="../js/vendor/three.min.js"></script>
+	<script src="js/main.js"></script>
 	<script>
 	window.addEventListener( 'DOMContentLoaded', main, false );
 	</script>
