--- a/object_picking/index.html
+++ b/object_picking/index.html
@@ -13,6 +13,7 @@
 <script src="../js/vendor/three.min.js"></script>
 <script src="../js/vendor/libs/stats.js"></script>
 <script src="../js/vendor/controls/OrbitCtrols.js"></script>
+<script src="../js/vendor/controls/DeviceOrientationControls.js"></script>
 <script src="../js/vendor/renderer/Projector.js"></script>
 <script src="js/main.js"></script>
 <script>window.addEventListener( 'DOMContentLoaded', main, false );</script>
